--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,9 @@
 --light-text:rgba(255,255,255, 0.8);
 
 --h:87vh;
+--w:400px;
 --portrait-h:68vh;
+--portrait-w:400px;
 
 
 
